Overall changes made in header and landing screen, plans and requrest demo

--- a/Innovatie Integration/azure-integration.html
+++ b/Innovatie Integration/azure-integration.html
@@ -62,9 +62,9 @@
             <nav class="navbar navbar-expand-xl navbar-light sticky-header">
                 <div class="container d-flex align-items-center justify-content-lg-between position-relative">
                     <a href="../index.html" class="navbar-brand d-flex align-items-center mb-md-0 text-decoration-none">
-                        <img src="../assets/img/logos/DevozyLogo2.svg" width="113" height="36" alt="logo"
+                        <img src="../assets/img/logos/DevozyLogo2.svg" width="160" height="36" alt="logo"
                             class="img-fluid logo-white" />
-                        <img src="../assets/img/logos/DevozyLogo.svg" width="113" height="36" alt="logo"
+                        <img src="../assets/img/logos/DevozyLogo.svg" width="160" height="36" alt="logo"
                             class="img-fluid logo-color" />
                     </a>
 
@@ -301,7 +301,7 @@
                                             </div>
                                         </div>
                                     </li>
-                        <li><a href="../pricing-plans.html" class="nav-link">Pricing</a></li>
+                        <li><a href="../pricing-plans.html" class="nav-link">Plans</a></li>
                     </ul>
 
 
@@ -314,7 +314,7 @@
                                 data-bs-title="Dark"><i class="flaticon-moon-1 fs-lg"></i></div>
                         </a> <a href="https://web.devozy.ai/" target="_self"
                             class="btn btn-link text-decoration-none me-2">Login</a>
-                        <button onclick="window.location.href='../request-demo.html'" name="getdevozyfree" type="submit" class="btn btn-primary">Get Started
+                        <button onclick="window.location.href='../request-demo.html'" name="getdevozyfree" type="submit" class="btn btn-primary">Try Devozy.ai Now
                    </button>
                     </div>
                 </div>
@@ -558,12 +558,12 @@
                                             </div>
                                         </div>
                                     </li>
-                        <li><a href="../pricing-plans.html" class="nav-link">Pricing</a></li>
+                        <li><a href="../pricing-plans.html" class="nav-link">Plans</a></li>
                     </ul>
 
                     <div class="action-btns mt-4 ps-3">
                         <!-- <a href="../login.html" class="btn btn-outline-primary me-2">Sign In</a> -->
-                        <a href="../request-demo.html" class="btn btn-primary">Get Started</a>
+                        <a href="../request-demo.html" class="btn btn-primary">Try Devozy.ai Now</a>
                     </div>
                 </div>
             </div>
@@ -754,7 +754,7 @@
                                             <li><a href="#premium_devozy_feature"
                                                     class="text-decoration-none">Features</a></li>
                                             <li><a href="#devozy" class="text-decoration-none">Devozy</a></li>
-                                            <li><a href="#Pricing" class="text-decoration-none">Pricing</a></li>
+                                            <li><a href="#Pricing" class="text-decoration-none">Plans</a></li>
                                             <li><a href="#review" class="text-decoration-none">Testimonial</a>
                                             </li>
                                             <li><a href="request-demo.html" class="text-decoration-none">Get free
