--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@ No DevOps. No Scripts. Just Click & Deploy.
 <div>
     <section class="integration-section bg-test">
         <div class="container">
-          <h3 style="text-align: center;">Completely Self-service from Build, Deployment <br>to Security,Testing & Scaling</h3>
+          <h3 style="text-align: left;">Completely Self-service from Build, Deployment <br>to Security,Testing & Scaling</h3>
           <div class="content">
             <div class="image-container">
               <img src="seamless-illustration1.png" alt="Integration Illustration">
@@ -1085,7 +1085,7 @@ No DevOps. No Scripts. Just Click & Deploy.
   </section>
   
   <!--feature service grid section start-->
-  <section class="feature-section ptb-120 bg-dark text-white ">
+  <section class="feature-section ptb-120 bg-light-subtle">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-10">
@@ -1098,7 +1098,7 @@ No DevOps. No Scripts. Just Click & Deploy.
         <div class="row">
             <div class="col-12">
                 <div class="feature-grid">
-                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light text-white shadow-sm highlight-card rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
+                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light  shadow-sm highlight-card rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
                         <div class="icon-box d-inline-block rounded-circle bg-primary-soft mb-32">
                             <i class="fas fa-chart-simple icon-sm text-primary"></i>
                         </div>
@@ -1109,10 +1109,11 @@ No DevOps. No Scripts. Just Click & Deploy.
                                Experience the ultimate all-in-one self-service platform for Agile project management, CI/CD pipelines, app provisioning, and multi-cloud infrastructure management. Track production incidents, streamline IT operations, and empower engineering teams with our connected suite. Simplify complexity and drive innovation effortlessly!
                            </p>    
                         </div>
-                        <a href="request-demo.html" class="link-with-icon text-decoration-none mt-3">Get Started<i
+                        <a href="javascript:void(0);"class=" link-with-icon text-decoration-none mt-3 fw-bold"  data-bs-toggle="modal" 
+                        data-bs-target="#devozyTrialModal">Try Devozy.ai Now<i
                               class="fas fa-arrow-right"></i></a>
                     </div>
-                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light text-white shadow-sm rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
+                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light shadow-sm rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
                         <div class="icon-box d-inline-block rounded-circle bg-success-soft mb-32">
                             <i class="fas fa-file icon-sm text-success"></i>
                         </div>
@@ -1123,7 +1124,7 @@ No DevOps. No Scripts. Just Click & Deploy.
                         <!-- <a href="service-single.html" class="link-with-icon text-decoration-none mt-3">View Details <i
                               class="fas fa-arrow-right"></i></a> -->
                     </div>
-                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light text-white shadow-sm rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
+                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light  shadow-sm rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
                         <div class="icon-box d-inline-block rounded-circle bg-danger-soft mb-32">
                             <i class="fas fa-cloud icon-sm text-danger"></i>
                         </div>
@@ -1134,7 +1135,7 @@ No DevOps. No Scripts. Just Click & Deploy.
                         <!-- <a href="service-single.html" class="link-with-icon text-decoration-none mt-3">View Details <i
                               class="fas fa-arrow-right"></i></a> -->
                     </div>
-                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light text-white shadow-sm rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
+                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light  shadow-sm rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
                         <div class="icon-box d-inline-block rounded-circle bg-dark-soft mb-32">
                             <i class="fas fa-infinity icon-sm text-dark"></i>
                         </div>
@@ -1145,7 +1146,7 @@ No DevOps. No Scripts. Just Click & Deploy.
                         <!-- <a href="service-single.html" class="link-with-icon text-decoration-none mt-3">View Details <i
                               class="fas fa-arrow-right"></i></a> -->
                     </div>
-                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light text-white shadow-sm rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
+                    <div class="feature-card  bg-custom-light promo-border-hover border border-2 border-light  shadow-sm rounded-custom p-5" data-aos="fade-up" data-aos-delay="50">
                         <div class="icon-box d-inline-block rounded-circle bg-warning-soft mb-32">
                             <i class="fas fa-tasks icon-sm text-warning"></i>
                         </div>
@@ -1233,19 +1234,19 @@ No DevOps. No Scripts. Just Click & Deploy.
                             <div class="swiper testimonialSwiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <div class="border border-2 p-5 rounded-custom position-relative">
+                                        <div class=" p-5 rounded-custom position-relative" style="background: linear-gradient(135deg, #007CF0 30%, #7928CA 100%);">
                                             <img src="assets/img/testimonial/quotes-dot.svg" alt="quotes" width="100"
                                                 class="img-fluid position-absolute left-0 top-0 z--1 p-3">
-                                            <div class="d-flex mb-32 align-items-center">
-                                                <img src="people/male.png" class="img-fluid me-3 rounded" width="60"
+                                            <div class="d-flex mb-32a  lign-items-center">
+                                                <img src="people/male-image.jpg" class="img-fluid me-3 rounded" width="60"
                                                     alt="user">
                                                 <div class="author-info">
                                                     <h6 class="mb-0">Vishnu Prasad</h6>
                                                     <!-- <small>Founder and CEO at Amaara Herbs</small> -->
                                                 </div>
                                             </div>
-                                            <blockquote>
-                                                <h6>A Success Story with YozY!</h6>
+                                            <blockquote class="text-white">
+                                                <h6 class="mt-4 text-white">A Success Story with YozY!</h6>
                                                 YozY
                                                 team
                                                 was developed a mobile app to automate our complex & challenging
@@ -1274,18 +1275,18 @@ No DevOps. No Scripts. Just Click & Deploy.
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
-                                        <div class="border border-2 p-5 rounded-custom position-relative">
+                                        <div class="border border-2 p-5 rounded-custom position-relative" >
                                             <img src="assets/img/testimonial/quotes-dot.svg" alt="quotes" width="100"
                                                 class="img-fluid position-absolute left-0 top-0 z--1 p-3">
                                             <div class="d-flex mb-32 align-items-center">
-                                                <img src="people/female.png" class="img-fluid me-3 rounded" width="60"
+                                                <img src="people/female-image.jpg" class="img-fluid me-3 rounded" width="60"
                                                     alt="user">
                                                 <div class="author-info">
                                                     <h6 class="mb-0">Ragini</h6>
                                                     <!-- <small>CEO at Herbs</small> -->
                                                 </div>
                                             </div>
-                                            <blockquote>
+                                            <blockquote >
                                                 <h6>User-Centric and Efficient.</h6>
                                                 I've been amazed by the transformation our workflow has undergone since
                                                 implementing this IT product. It's incredibly user-centric, seamlessly
@@ -1311,19 +1312,19 @@ No DevOps. No Scripts. Just Click & Deploy.
                                     </div>
 
                                     <div class="swiper-slide">
-                                        <div class="border border-2 p-5 rounded-custom position-relative">
+                                        <div class=" p-5 rounded-custom position-relative" style="background: linear-gradient(135deg, #007CF0 30%, #7928CA 100%);">
                                             <img src="assets/img/testimonial/quotes-dot.svg" alt="quotes" width="100"
                                                 class="img-fluid position-absolute left-0 top-0 z--1 p-3">
                                             <div class="d-flex mb-32 align-items-center">
-                                                <img src="people/male.png" class="img-fluid me-3 rounded" width="60"
+                                                <img src="people/male-image2.jpg" class="img-fluid me-3 rounded" width="60"
                                                     alt="user">
                                                 <div class="author-info">
                                                     <h6 class="mb-0">Sathish</h6>
                                                     <!-- <small>Founder and CEO</small> -->
                                                 </div>
                                             </div>
-                                            <blockquote>
-                                                <h6>Simplifying Complexity</h6>
+                                            <blockquote class="text-white">
+                                                <h6 class="text-white">Simplifying Complexity</h6>
                                                 Complexity used to be the norm in our day-to-day operations, but with
                                                 this IT product, things have taken a turn for the better. The app's
                                                 intuitive design and seamless integration have simplified our processes,
@@ -1361,14 +1362,14 @@ No DevOps. No Scripts. Just Click & Deploy.
         </section> <!--testimonial section end-->
        
         <!--cat subscribe start-->
-        <section class="cta-subscribe bg-dark text-white ptb-120 position-relative overflow-hidden">
+        <section class="cta-subscribe ptb-60 position-relative overflow-hidden">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-md-10">
                         <div class="subscribe-info-wrap text-center position-relative z-2">
-                            <div class="section-heading" data-aos="fade-up">
-                                <h4 class="h5 text-warning">Let's talk with free platform demo!</h4>
-                                <h2>Start your free subscription post the demo</h2>
+                            <div class="section-heading">
+                                <h4 >Let's talk with free platform demo!</h4>
+                                <h2 class="text-white">Start your free subscription post the demo</h2>
                                 <p> You get one application hosted into cloud with monthly 3 continuous deployment free</p>
                             </div>
                             <div class="form-block-banner mw-60 m-auto mt-5" data-aos="fade-up" data-aos-delay="50">
@@ -1378,18 +1379,18 @@ No DevOps. No Scripts. Just Click & Deploy.
                             </div>
                             <ul class="nav justify-content-center subscribe-feature-list mt-4" data-aos="fade-up"
                                 data-aos-delay="100">
-                                <li class="nav-item">
-                                    <span><i class="far fa-check-circle text-primary me-2"></i>Enquire us for free subscription</span>
+                                <li >
+                                    <span><i class="far fa-check-circle text-white me-2"></i>Enquire us for free subscription</span>
                                 </li>
                                 <li class="nav-item">
-                                    <span><i class="far fa-check-circle text-primary me-2"></i>No credit card
+                                    <span><i class="far fa-check-circle text-white me-2"></i>No credit card
                                         required</span>
                                 </li>
                                 <li class="nav-item">
-                                    <span><i class="far fa-check-circle text-primary me-2"></i>Support 24/7</span>
+                                    <span><i class="far fa-check-circle text-white me-2"></i>Support 24/7</span>
                                 </li>
                                 <li class="nav-item">
-                                    <span><i class="far fa-check-circle text-primary me-2"></i>Cancel anytime</span>
+                                    <span><i class="far fa-check-circle text-white me-2"></i>Cancel anytime</span>
                                 </li>
                             </ul>
                         </div>
@@ -1398,7 +1399,8 @@ No DevOps. No Scripts. Just Click & Deploy.
                 <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-dark-light left-5"></div>
                 <div class="bg-circle rounded-circle circle-shape-1 position-absolute bg-warning right-5"></div>
             </div>
-        </section> <!--cat subscribe end-->
+        </section>
+         <!--cat subscribe end-->
 
 
         <!--footer section start-->
