--- a/request-demo.html
+++ b/request-demo.html
@@ -107,9 +107,9 @@
             <nav class="navbar navbar-expand-xl navbar-light sticky-header">
                 <div class="container d-flex align-items-center justify-content-lg-between position-relative">
                     <a href="index.html" class="navbar-brand d-flex align-items-center mb-md-0 text-decoration-none">
-                        <img src="assets/img/logos/DevozyLogo2.svg" width="113" height="36" alt="logo"
+                        <img src="assets/img/logos/DevozyLogo2.svg" width="160" height="36" alt="logo"
                             class="img-fluid logo-white" />
-                        <img src="assets/img/logos/DevozyLogo.svg" width="113" height="36" alt="logo"
+                        <img src="assets/img/logos/DevozyLogo.svg" width="160" height="36" alt="logo"
                             class="img-fluid logo-color" />
                     </a>
 
@@ -358,7 +358,7 @@
                                 data-bs-title="Dark"><i class="flaticon-moon-1 fs-lg"></i></div>
                         </a> <a href="https://web.devozy.ai/login" target="_blank"
                             class="btn btn-link text-decoration-none me-2">Login</a>
-                        <a href="request-demo.html" class="btn btn-primary" target="_blank">Get Started</a>
+                        <a href="request-demo.html" class="btn btn-primary" target="_blank">Try Devozy.ai Now</a>
                     </div>
                 </div>
             </nav>
@@ -610,14 +610,15 @@
 
         <!--register section start-->
         <section class="sign-up-in-section bg-dark ptb-120"
-            style="background: url('assets/img/page-header-bg.svg')no-repeat bottom right">
+            style="background:linear-gradient(135deg, #4F00FF 0%, #C800FF 33%, #f6a368 66%, #ff809d 100%)">
             <div class="container">
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10">
                         <div class="hero-content-wrap">
                             <h1 class="fw-bold text-dark display-5"> Fill out the form and we'll be in touch as soon as possible. </h1>                              
-                            <hr>
-                            <p class="h5 text-warning"> You get one application hosted into cloud with monthly 3 continuous deployments free</p>
+                            <p class="h5 text-dark"> You get one application hosted into cloud with monthly 3 continuous deployments free</p>
+                            <!-- <p>🎁 Unlock These, Instantly — Just for Signing Up</p>
+                            <p>🎁 Free 1 Application Environment Setup in – AWS, Azure, or GCP</p> -->
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-7 col-md-12 order-0 order-lg-1">
