--- a/blog-single.html
+++ b/blog-single.html
@@ -523,7 +523,7 @@
                             <div class="tt-theme-light" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Light"><i class="flaticon-sun-1 fs-lg"></i></div>
                             <div class="tt-theme-dark" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Dark"><i class="flaticon-moon-1 fs-lg"></i></div>
                         </a> <a href="login.html" class="btn btn-link text-decoration-none me-2">Login</a>
-                        <a href="request-demo.html" class="btn btn-primary">Get Started</a>
+                        <a href="request-demo.html" class="btn btn-primary">Try Devozy.ai Now</a>
                     </div>
                 </div>
             </nav>
@@ -982,7 +982,7 @@
                     </ul>
                     <div class="action-btns mt-4 ps-3">
                         <a href="login.html" class="btn btn-outline-primary me-2">Login</a>
-                        <a href="request-demo.html" class="btn btn-primary">Get Started</a>
+                        <a href="request-demo.html" class="btn btn-primary">Try Devozy.ai Now</a>
                     </div>
                 </div>
             </div>
