--- a/product/dessa.html
+++ b/product/dessa.html
@@ -589,7 +589,7 @@
         <!--header section end-->
 
                <!--page header section start-->
-               <section class="page-header position-relative overflow-hidden ptb-120 bg-dark" style="background: url('assets/img/page-header-bg.svg')no-repeat bottom left">
+               <section class="page-header position-relative overflow-hidden ptb-120 bg-dark" style="background:linear-gradient(135deg, #4F00FF 0%, #C800FF 33%, #f6a368 66%, #ff809d 100%)">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-md-12">
@@ -644,6 +644,44 @@
                                         <!-- <img src="../assets/img/integations/shape.svg" alt="integations"> -->
                                     </div>
                                     <img src="../dessa-illustration.png" class="img-fluid  rounded-custom shadow-lg" alt="softtent">
+                                    <div class="d-flex flex-column align-items-center text-center mt-2">
+                                        <p style="font-size: 15px;">
+                                            🎁 Free 1 Application Environment Setup in – <b>AWS, Azure, or GCP</b><br/>
+                                            No DevOps. No Scripts. Just Click & Deploy.
+                                        </p>
+                                        <div class="book-call mt-4">
+                                            <button onclick="window.location.href='javascript:void(0);'" data-bs-toggle="modal" data-bs-target="#devozyTrialModal"   class="btn btn-outline-primary">
+                                                🚀 Start your Free Subscription 
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="modal fade" id="devozyTrialModal" tabindex="-1" aria-labelledby="devozyTrialModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered">
+                                          <div class="modal-content">
+                                            <div class="modal-header">
+                                              <h5 class="modal-title" id="devozyTrialModalLabel">🚀 Try Devozy.ai for Free</h5>
+                                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                              <form id="trialForm">
+                                                <div class="mb-3">
+                                                  <label for="trialName" class="form-label">Full Name</label>
+                                                  <input type="text"  id="name" class="form-control" id="trialName" required>
+                                                </div>
+                                                <div class="mb-3">
+                                                  <label for="trialEmail"  class="form-label">Work Email</label>
+                                                  <input type="email" id="email" class="form-control" id="trialEmail" required>
+                                                </div>
+                                                <!-- added recaptcha-->
+                                                <div class="g-recaptcha" data-sitekey="6LfSD2MqAAAAALEqUAkqDns42LCDBYeiNSwt70jm"></div>
+                                                <div class="mb-3">
+                                                <button onclick="go(event)" type="submit" class="btn btn-primary w-100">Submit Request</button>
+                                                </div>            
+                                              </form>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
                                 </div>
                             </div>
                         </div>
@@ -890,6 +928,8 @@
     <script src="../assets/js/vendors/aos.js"></script>
     <script src="../assets/js/vendors/massonry.min.js"></script>
     <script src="../assets/js/app.js"></script>
+    <script src="../assets/js/form-handler.js"></script>
+
     <!--endbuild-->
 </body>
 
