spelling mistake fixes

--- a/product/talend-qlik.html
+++ b/product/talend-qlik.html
@@ -598,7 +598,7 @@
                             <!-- <h1 class="display-5 fw-bold">Qlik Talend</h1>Automate Qlik Talend Deployments with Devozy.ai -->
                             <h1 class="display-5 fw-bold">Automate Qlik Talend Deployments with Devozy.ai</h1>
                             <p class="lead"> 
-                                Devozy.ai (No Code) Platform automates CICD and publish your Standard jobs, Camel routs to Talend cloud or TAC instantly. Supports below use cases for Talend Customers:
+                                Devozy.ai (No Code) Platform automates CICD and publish your Standard jobs, Camel routes to Talend cloud or TAC instantly. Supports below use cases for Talend Customers:
                              </p>
                              <ul style="list-style: none; padding-left: 0;">
                                 <li><strong>⚡ Accelerate Qlik Talend Build & Deployments from Day 1</strong></li> 
@@ -622,9 +622,9 @@
                         <div class="row align-content-center justify-content-center">
                             <div class="col-lg-6 col-md-12">
                                 <div style="font-size: 16px; line-height: 1.7; max-width: 720px; margin: auto;">
-                                    <h2><strong>Tailored IDP for Qlik Talend</strong></h2>
+                                    <h2><strong>Tailored Identity Provider (IDP) for Qlik Talend</strong></h2>
                                     <p>
-                                      Devozy.ai’s no-code platform empowers Qlik Talend developers to deploy jobs instantly and publish to Talend Cloud/TAC from day one.
+                                      Devozy.ai’s no-code platform empowers Qlik Talend developers to deploy jobs instantly and publish to Talend Management Console (TMC) and/or Talend Administration Center (TAC) from day one.
                                       With seamless integration to Nexus, GitHub, and SonarQube, deployments happen in just a few clicks—no manual steps, no DevOps hassle.
                                       This automation boosts productivity by up to 5x and cuts project costs by 10x.
                                     </p>
