Main updates on Qlik talend

--- a/index.html
+++ b/index.html
@@ -304,15 +304,15 @@
                                                 </div>
                                             </div>
                                             </a>
-                                            <div style="font-size: 12px; margin-left:14px; margin-top:10px;">Tailored IDP for Talend Qlik</div> 
+                                            <div style="font-size: 12px; margin-left:14px; margin-top:10px;">Tailored IDP for Qlik Talend</div> 
                                             <a target="_self" class="dropdown-item"
                                             href="product/talend-qlik.html" style=" text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
                                                 <i class="fa-solid fa-laptop-medical" style="color: #FE6266; font-size: 20px; margin-bottom: 10px;"></i>
-                                                <div class="drop-title">Talend Qlik</div>
+                                                <div class="drop-title">Qlik Talend</div>
                                                 <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
                                                     <!-- Everything you need to <br> know, answered with clarity <br> and detail. -->
-                                                    Say Goodbye to Manual Talend Qlik <br> Deployments! Seamless integration  <br> with Talend Qlik Cloud and TAC.
+                                                    Say Goodbye to Manual Qlik Talend <br> Deployments! Seamless integration  <br> with Qlik Talend Cloud and TAC.
                                                 </div>
                                             </div>
                                             </a>
@@ -386,7 +386,7 @@
 
                                               </span>
                                               <div style="margin-left: 12px;">
-                                                <div class="drop-title">Talend Qlik</div>
+                                                <div class="drop-title">Qlik Talend</div>
                                                 <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
                                                     Seamless integration with Talend cloud, TAC for your jobs deployments
                                                     <br> supports Nexus, Jenkins for your Talend project needs.
@@ -430,13 +430,13 @@
                                                 <span class="me-2">
                               <!-- <i class="flaticon-web-programming"></i> -->
                             </span>
-                            <div class="drop-title" style="font-size: 13px;">Save Hours on Talend Qlik Deployments with Devozy.ai.</div>
+                            <div class="drop-title" style="font-size: 13px;">Save Hours on Qlik Talend Deployments with Devozy.ai.</div>
                                             </a>
                                             <a href="IT Eng Team/5ways_cicd.html" class="dropdown-link">
                                                 <span class="me-2">
                               <!-- <i class="flaticon-web-programming"></i> -->
                             </span>
-                            <div class="drop-title" style="font-size: 13px;">5 Ways how Devozy.ai simplifies Talend Qlik CI/CD.</div>
+                            <div class="drop-title" style="font-size: 13px;">5 Ways how Devozy.ai simplifies Qlik Talend CI/CD.</div>
                                             </a>
                                             <a href="IT Eng Team/dedicated_cicd_tool.html" class="dropdown-link">
                                                 <span class="me-2">
@@ -575,15 +575,15 @@
                                             </div>
                                         </div>
                                         </a>
-                                        <div style="font-size: 12px; margin-left:14px; margin-top:10px;">Tailored IDP for Talend Qlik</div> 
+                                        <div style="font-size: 12px; margin-left:14px; margin-top:10px;">Tailored IDP for Qlik Talend</div> 
                                         <a target="_self" class="dropdown-item"
                                         href="product/talend-qlik.html" style=" text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-solid fa-laptop-medical" style="color: #FE6266; font-size: 20px; margin-bottom: 10px;"></i>
-                                            <div class="drop-title">Talend Qlik</div>
+                                            <div class="drop-title">Qlik Talend</div>
                                             <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
                                                 <!-- Everything you need to <br> know, answered with clarity <br> and detail. -->
-                                                Say Goodbye to Manual Talend Qlik <br> Deployments! Seamless integration  <br> with Talend Qlik Cloud and TAC.
+                                                Say Goodbye to Manual Qlik Talend <br> Deployments! Seamless integration  <br> with Qlik Talend Cloud and TAC.
                                             </div>
                                         </div>
                                         </a>
@@ -655,7 +655,7 @@
 
                                           </span>
                                           <div style="margin-left: 12px;">
-                                            <div class="drop-title">Talend Qlik</div>
+                                            <div class="drop-title">Qlik Talend</div>
                                             <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
                                                 Seamless integration with Talend cloud, TAC for your jobs deployments
                                                 <br> supports Nexus, Jenkins for your Talend project needs.
@@ -699,13 +699,13 @@
                                             <span class="me-2">
                           <!-- <i class="flaticon-web-programming"></i> -->
                         </span>
-                        <div class="drop-title" style="font-size: 13px;">Save Hours on Talend Qlik Deployments with Devozy.ai.</div>
+                        <div class="drop-title" style="font-size: 13px;">Save Hours on Qlik Talend Deployments with Devozy.ai.</div>
                                         </a>
                                         <a href="IT Eng Team/5ways_cicd.html" class="dropdown-link">
                                             <span class="me-2">
                           <!-- <i class="flaticon-web-programming"></i> -->
                         </span>
-                        <div class="drop-title" style="font-size: 13px;">5 Ways how Devozy.ai simplifies Talend Qlik CI/CD.</div>
+                        <div class="drop-title" style="font-size: 13px;">5 Ways how Devozy.ai simplifies Qlik Talend CI/CD.</div>
                                         </a>
                                         <a href="IT Eng Team/dedicated_cicd_tool.html" class="dropdown-link">
                                             <span class="me-2">
